Alterações solicitadas pelo professor

--- a/login.html
+++ b/login.html
@@ -12,11 +12,13 @@
         <!-- BOOTSTRAP CORE STYLE CSS -->
         <link href="assets/css/bootstrap.css" rel="stylesheet" />
         <!-- FONTAWESOME STYLE CSS -->
-        <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
+        <link href="plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" />
         <!-- CUSTOM STYLE CSS -->
         <link href="assets/css/style.css" rel="stylesheet" />    
         <!-- GOOGLE FONT -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+        <!-- CSS -->
+        <link href="css/estilo.css" rel="stylesheet" />   
 
     </head>
     <body >
@@ -29,7 +31,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img src="imagens/LogoAutofood.png" class="img-responsive" style="position: relative; bottom: 10px;" alt="" /></a>
+                    <a class="navbar-brand" href="#"><img src="imagens/LogoAutofood.png" class="img-responsive logo" alt="" /></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -65,12 +67,12 @@
                             <h4 class="form-signin-heading">Bem-Vindo</h4>
                             <input name="login" id="login" type="text" class="form-control" placeholder="Login">
                                 <input name="senha" type="password" class="form-control" placeholder="Senha">
-                                    <button class="btn btn-large btn-block btn-primary" type="submit">Entrar</button>
+                                    <a class="btn btn-primary col-sm-12" href="pedidos/loja.html">Entrar</a>
                                     </form>
                                     <br>
                                         <label id="esqueceu">Não é cadastrado?<a href="cadastro.html">Clique Aqui</a> e se cadastre</label>
                                         </div>
-                                        </div>                
+                                        </div>
                                         </div>
                                         </section>
                                         <section id="footer-sec" >
