--- a/cadastro.html
+++ b/cadastro.html
@@ -12,11 +12,13 @@
         <!-- BOOTSTRAP CORE STYLE CSS -->
         <link href="assets/css/bootstrap.css" rel="stylesheet" />
         <!-- FONTAWESOME STYLE CSS -->
-        <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
+        <link href="plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" />
         <!-- CUSTOM STYLE CSS -->
         <link href="assets/css/style.css" rel="stylesheet" />    
         <!-- GOOGLE FONT -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+        <!-- CSS -->
+        <link href="css/estilo.css" rel="stylesheet" />    
 
     </head>
     <body >
@@ -29,7 +31,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img src="imagens/LogoAutofood.png" class="img-responsive" style="position: relative; bottom: 10px;" alt="" /></a>
+                    <a class="navbar-brand" href="#"><img src="imagens/LogoAutofood.png" class="img-responsive logo" alt="" /></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
