--- a/contact.html
+++ b/contact.html
@@ -12,37 +12,19 @@
         <!-- BOOTSTRAP CORE STYLE CSS -->
         <link href="assets/css/bootstrap.css" rel="stylesheet" />
         <!-- FONTAWESOME STYLE CSS -->
-        <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
+        <link href="plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" />
         <!-- CUSTOM STYLE CSS -->
         <link href="assets/css/style.css" rel="stylesheet" />    
         <!-- GOOGLE FONT -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+        <!-- CSS -->
+        <link href="css/estilo.css" rel="stylesheet" />    
 
         <script
             src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY0kkJiTPVd2U7aTOAwhc9ySH6oHxOIYM&sensor=false">
         </script>
 
-        <script>
-            var myCenter = new google.maps.LatLng(-8.1616651, -34.9172363);
-            function initialize()
-            {
-                var mapProp = {
-                    center: myCenter,
-                    zoom: 17,
-                    mapTypeId: google.maps.MapTypeId.ROADMAP
-                };
 
-                var map = new google.maps.Map(document.getElementById("contato"), mapProp);
-
-                var marker = new google.maps.Marker({
-                    position: myCenter,
-                });
-
-                marker.setMap(map);
-            }
-
-            google.maps.event.addDomListener(window, 'load', initialize);
-        </script>
     </head>
     <body >
 
@@ -54,7 +36,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img src="imagens/LogoAutofood.png" class="img-responsive" style="position: relative; bottom: 10px;" alt="" /></a>
+                    <a class="navbar-brand" href="#"><img src="imagens/LogoAutofood.png" class="img-responsive logo" alt="" /></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -83,8 +65,7 @@
         <!--/.HEADING END-->
 
         <section  id="contact-sec">
-            <iframe class="cnt" src="https://www.google.com/maps/embed/v1/search?key=AIzaSyA9UKZysU8UbxTBPirQmCBaXtbFkjsl-RY&q=Faculdade+dos+Guararapes"</iframe>
-            <!--<iframe class="cnt" src="https://www.google.com/maps/embed/v1/streetview?key=AIzaSyA9UKZysU8UbxTBPirQmCBaXtbFkjsl-RY&location=-8.1616651,-34.9172363&heading=210&pitch=10&fov=35"</iframe>-->
+            <iframe class="cnt" src="https://www.google.com/maps/embed/v1/search?key=AIzaSyA9UKZysU8UbxTBPirQmCBaXtbFkjsl-RY&q=Faculdade+dos+Guararapes"></iframe>
             <div class="add">
                 <i>ENDEREÇO: </i>FACULDADE DOS GUARARAPES, RUA COMENDADOR JOSÉ DIDIER, 27, PIEDADE - JABOATÃO DOS GUARARAPES - PE
             </div>
@@ -108,7 +89,7 @@
             <div class="container">
                 <div class="row text-center pad-bottom" >
                     <div class="col-md-12">
-                        <img src="imagens/clients.png" alt="" class="img-responsive" />
+                        <img src="imagens/clients.png" alt="" class="img-responsive clientes" />
                     </div>
 
                 </div>
