--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li data-target="#carousel-example" data-slide-to="1"></li>
                     <li data-target="#carousel-example" data-slide-to="2"></li>
                 </ol>
-                <div class="carousel-inner" style="background-color: #d2322d;">
+                <div class="carousel-inner" id="carousel">
                     <div class="item active">
                         <div class="col-sm-6">
                             <img class="img-responsive" src="imagens/ChinaInBox.png" alt="" />
