--- a/pedidos/loja.html
+++ b/pedidos/loja.html
@@ -66,10 +66,10 @@
                     <div class="col-md-6 col-md-offset-3">
                         <form class="form-signin" action="" method="post">
                             <div class="control-group col-md-4">
-                                <a href="pedidos.html"><img class="img-responsive" src="../imagens/ChinaInBox.png" alt="" /></a>
+                                <a href="pedidos.html"><img class="img-responsive" id="logoChina"  src="../imagens/ChinaInBox.png" alt="" /></a>
                             </div>
                             <div class="control-group col-md-4">
-                                <a href="pedidos.html"><img class="img-responsive" src="../imagens/LacaBurguer.png" alt="" /></a>
+                                <a href="pedidos.html"><img class="img-responsive" id="logoLaca" src="../imagens/LacaBurguer.png" alt="" /></a>
                             </div>
                             <div class="control-group col-md-4">
                                 <a href="pedidos.html"><img class="img-responsive" src="../imagens/Mcdonalds.png" alt="" /></a>
@@ -90,7 +90,7 @@
                                                         <div class="row  pad-bottom" >
                                                             <div class="col-md-4 col-md-offset-2">
                                                                 <h4> <strong>SOBRE NÓS</strong> </h4>
-                                                                <p>
+                                                                <p id="sobre">
                                                                     NOSSA MISSÃO É PROPORCIONAR UMA MELHOR INTERAÇÃO ENTRE<BR>
                                                                         VOCÊ CLIENTE E O ESTABELECIMENTO QUE VOCÊ DESEJA SE ALIMENTAR.
                                                                 </p>
