--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="row text-center pad-row" >
                     <div class="col-md-12">
-                        <h1>  FAÇA SEU PEDIDO  </h1>
+                        <h1 id="tituloPedido">  FAÇA SEU PEDIDO  </h1>
                     </div>
                 </div>
             </div>   
@@ -69,8 +69,8 @@
                                 <div class="controls">
                                     <table class="table table-bordered table-hover table-striped">
                                         <tr>
-                                            <th style="text-align: center;">Opções</th>
-                                            <th style="text-align: center;">Qtd.</th>
+                                            <th>Opções</th>
+                                            <th>Qtd.</th>
                                         </tr>
                                         <tr>
                                             <td>
@@ -118,8 +118,8 @@
                                 <div class="controls">
                                     <table class="table table-bordered table-hover table-striped">
                                         <tr>
-                                            <th style="text-align: center;">Bebidas</th>
-                                            <th style="text-align: center;">Qtd.</th>
+                                            <th>Bebidas</th>
+                                            <th>Qtd.</th>
                                         </tr>
                                         <tr>
                                             <td>
