--- a/pedidos/statusPedido.html
+++ b/pedidos/statusPedido.html
@@ -72,8 +72,8 @@
                                 <div class="controls">
                                     <table class="table table-bordered table-hover table-striped">
                                         <tr>
-                                            <th style="text-align: center;">Pedido</th>
-                                            <th style="text-align: center;">Qtd</th>
+                                            <th>Pedido</th>
+                                            <th>Qtd</th>
                                         </tr>
                                         <tr>
                                             <td>Yakissoba</td>
@@ -91,8 +91,8 @@
                                 <div class="controls">
                                     <table class="table table-bordered table-hover table-striped">
                                         <tr>
-                                            <th style="text-align: center;">Status</th>
-                                            <th style="text-align: center;">Hora</th>
+                                            <th>Status</th>
+                                            <th>Hora</th>
                                         </tr>
                                         <tr>
                                             <td>Sendo Preparado</td>
