--- a/cadastro.html
+++ b/cadastro.html
@@ -107,10 +107,10 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-6 col-md-offset-1">
+                            <div class="col-md-12 col-center">
                                 <br>
-                                    <input type="hidden" name="post" value="1">                        
-                                        <button type="submit" class="btn btn-primary col-md-offset-7">Cadastrar</button>
+                                    <input type="hidden" name="post" value="1">
+                                        <a class="btn btn-primary" href="login.html">Entrar</a>
                                         <br>
                                             <br>
                                                 </div>                        
