--- a/pedidos/classifiquePedido.html
+++ b/pedidos/classifiquePedido.html
@@ -72,8 +72,8 @@
                                 <div class="controls">
                                     <table class="table table-bordered table-hover table-striped">
                                         <tr>
-                                            <th style="text-align: center;">Pedido</th>
-                                            <th style="text-align: center;">Nota</th>
+                                            <th>Pedido</th>
+                                            <th>Nota</th>
                                         </tr>
                                         <tr>
                                             <td>Yakissoba</td>
